# kivycollisiontest

./: .gitignore  README.md  checkpygame.py  collider.py  collider2.py  drag2.py  floatlayoutpixelcollisiontest.py  fulltrans.py  kivyopencv.py  my.Kv  not right.txt  opengleshell.py  pixelcollision.py  pyproject.toml  requirements.txt  roundedtextinput.py  rtextinput2.py  rtextinput3_gpt.py  shapechange.py  stencilex.py  threading_example.py  threading_mediapipe.py  threading_mediapipe2.py  thresholder.py  uniqueidbutton.py
